# logos-lidl

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: ci.yml  doctests.yml
docs/: project.md  spec.md
doctests/: run.sh  using-logos-lidl.test.yaml
include/lidl/: ast.hpp  json.hpp  lexer.hpp  lidl_c.h  parser.hpp  serializer.hpp  validator.hpp
pr-4/: index.html
src/: json.cpp  lexer.cpp  lidl_c.cpp  parser.cpp  serializer.cpp  validator.cpp
tests/: test_lidl.cpp
